# rocket

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  _config.yml  appveyor.yml  configure.ac  examples.vs2015.sln  index.html  meson.build  params.json
contrib/: nuget.autopkg
docs/: Makefile  conf.py  index.rst  make.bat
editor/: Makefile.am  editor.pro  mainwindow.cpp  mainwindow.h  meson.build  syncdocument.cpp  syncdocument.h  syncpage.cpp  syncpage.h  synctrack.h  trackview.cpp  trackview.h
examples/: Makefile.am  example_bass.rocket  example_bass.vs2015.vcxproj  meson.build
lib/: Makefile.am  base.h  client.c  client.h  device.c  device.h  librocket.vs2013.vcxproj  librocket.vs2015.vcxproj  meson.build  sync.h  track.c  track.h
qt-editor/: qt-editor.pro  rownumberview.cpp  syncpage.cpp  syncpage.h  syncpageview.cpp  syncpageview.h  synctrack.cpp  synctrack.h  track.h  trackarea.cpp  trackarea.h  trackgroupnameview.cpp  trackgroupnameview.h  trackgroupview.cpp  trackview.cpp  trackview.h
tests/: test.c  test.h  test_device.c  test_track.c
usync/: example.c  example_usync.sln  example_usync.vcxproj  example_usync.vcxproj.filters  usync.c  usync.h
usync/src/: main_win_rel.cpp
